# branch-directory-map

./: .gitignore  README.md  build.gradle  create_adbc.bat  gradle.properties.example  settings.gradle  version.properties
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/branchdirectorymap/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: CA_branches.csv  LA_branches.csv  US_branches.csv  branches.db  markers.db
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/branchdirectorymap/: BranchDirectoryMap.java  CustomInfoWindowAdapter.java  CustomItem.java  CustomSearchView.java  DialogUtils.java  FileSelectionActivity.java  GeocodingResponse.java  GeocodingService.java  LatLngTracker.java  LocationDatabaseHelper.java  LocationUpdateAction.java  MainActivity.java  MapsActivity.java  MyItem.java  RetrofitClient.java  SearchSpinnerAdapter.java  (+1 more)
app/src/main/res/drawable/: ic_db.xml  ic_directions.xml  ic_dropdown.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_layer.xml  ic_menu.xml  ic_route.xml  left_menu_rounded.xml  right_menu_rounded.xml  searchspinner_background.xml
app/src/main/res/layout/: activity_fileselection.xml  activity_main.xml  activity_maps.xml  info_window.xml  spinner_selected_item.xml  spinner_selected_item_t.xml  suggestion_item.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: colors.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
